--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    background: #000;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.call-us-button {
+    @apply px-[18px] py-[8px] border-[#3F959B] border-[1px] border-solid shadow-button
+    hover:shadow-button-hover;
+  color: #fff; /* Set your desired text color */
+  font-weight: 400; /* Set your desired font weight */
+  transition: box-shadow 0.3s ease; /* Add a smooth transition effect */
+}
+
+.grid-button {
+    @apply px-[20px] py-[8px] bg-black text-white
+}
+.button {
+    @apply px-[20px] py-[8px]
+}
+section {
+    @apply text-white
 }
